--- a/project/package.json
+++ b/project/package.json
@@ -1,24 +1,53 @@
 {
-  "name": "project",
+  "name": "testing",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
-    "expo": "~49.0.10",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.12.0"
+    "@expo/ngrok": "^4.1.0",
+    "@gorhom/bottom-sheet": "^4",
+    "@miblanchard/react-native-slider": "^2.3.1",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/stack": "^6.3.11",
+    "expo": "^47.0.0",
+    "expo-dev-client": "~2.0.1",
+    "expo-location": "~15.0.1",
+    "expo-status-bar": "~1.4.2",
+    "firebase": "^8.10.1",
+    "geolib": "^3.3.3",
+    "react": "18.1.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-native": "0.70.5",
+    "react-native-calendars": "^1.1293.0",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-google-signin": "^2.1.1",
+    "react-native-maps": "1.3.2",
+    "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-modalize": "^2.1.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.3.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-scripts": "^5.0.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
