--- a/project/package.json
+++ b/project/package.json
@@ -25,6 +25,7 @@
     "firebase": "^8.10.1",
     "geolib": "^3.3.3",
     "react": "18.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hooks-global-state": "^2.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1293.0",
@@ -32,6 +33,7 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-google-signin": "^2.1.1",
     "react-native-maps": "1.3.2",
